@startuml UML
skinparam class {
    BackgroundColor White
    BorderColor #333
    ArrowColor #333
}

abstract class AbstractUser {
  + name: string
  + login: string
  # password: string
  + __construct(name, login, password)
  + {abstract} showInfo()
  + __destruct()
}

class User {
  + {static} count: int
  + showInfo()
}

class SuperUser {
  + {static} count: int
  + role: string
  + getInfo(): array
}

interface SuperUserInterface {
  + getInfo(): array
}

AbstractUser <|-- User
User <|-- SuperUser
SuperUserInterface <|.. SuperUser

@enduml